# telegram-claude-mcp

./: .env.example  README.EN.md  README.md  main.py  pyproject.toml
app/: config.py
app/base/: base_accessor.py
app/health/: __init__.py  schemes.py  view.py
app/posts/: models.py
app/store/: __init__.py
app/store/database/: __init__.py  database.py
app/store/posts/: accessor.py
app/userbot/: app.py
app/web/: app.py  middlewares.py  routes.py  schemes.py
mcp/: main.py  schemas.py
tests/: conftest.py
tests/health/test_routes/: test_healthcheck.py
